--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <header >
             <div class="logo"><a href="index.html">logo</a></div>
             <nav>
                 <ul>
@@ -20,23 +20,45 @@
             </nav>
         </header>
         <main>
-            <section class="hero"></section>
+            <section class="hero">
+                <div class="panneau"></div>
+            </section>
             <section class="apropos">
-                <div class="texte">
+                <div class="titres"> 
+                    
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta.</h2>
-                    <p>$</p>
                 </div>
-                <div class="picture"></div>
+                <div class="contenu">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</p>
+                    <div class="picture"></div>
+                </div>
+                <h2>Mange Bien</h2>
             </section>
-            <h2>Mange Bien</h2>
-        </main>
+            <section class="fin"></section>
+
+        </main> 
+        <footer>
+            <div class="menu_footer">
+                <div class="colonne">
+                    <h3>Menu Secondaire</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                </div>
+                <div class="colonne">
+                    <h3>Menu Secondaire</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                </div>
+                <div class="colonne">
+                    <h3>Menu Secondaire</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                </div>
+                <div class="colonne">
+                    <h3>Menu Secondaire</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                </div>
+            </div>
+            <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
+        </footer>
     </div>
-    <footer>
-        <div class="colonne"><h3>Menu Secondaire</h3></div>
-        <div class="colonne"><h3>Menu Secondaire</h3></div>
-        <div class="colonne"><h3>Menu Secondaire</h3></div>
-        <div class="colonne"><h3>Menu Secondaire</h3></div>
-    </footer>
 </body>
 </html>
