--- a/index.html
+++ b/index.html
@@ -9,33 +9,39 @@
 <body>
     <div class="container">
         <header >
-            <div class="logo"><a href="index.html">logo</a></div>
+            <div class="logo"><a href="index.html">
+            </a></div>
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Livraison</a></li>
-                    <li><a href="#">A Propos</a></li>
+                    <li><a href="#apropos">A Propos</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section class="hero">
-                <div class="panneau"></div>
+                <div class="panneau">
+                    <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
+                </div>
             </section>
-            <section class="apropos">
-                <div class="titres"> 
+            <section class="apropos" id="apropos">
+                <div class="texte">
+
+                    <div class="titres"> 
+                        
+                        <h1>Sushi Monster</h1>
+                        <h2>Fait sortir le monstre en toi !!</h2>
+                    </div>
+                    <div class="contenu">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</p>
+                    </div>
                     
-                    <h1>Lorem ipsum dolor sit amet.</h1>
-                    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta.</h2>
                 </div>
-                <div class="contenu">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</p>
-                    <div class="picture"></div>
-                </div>
-                <h2>Mange Bien</h2>
+                <div class="picture"></div>
             </section>
-            <section class="fin"></section>
+            <section class="fin"><h2>Mange Bien</h2></section>
 
         </main> 
         <footer>
