--- a/index.html
+++ b/index.html
@@ -35,32 +35,46 @@
                         <h2>Fait sortir le monstre en toi !!</h2>
                     </div>
                     <div class="contenu">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae <br>a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</br><br></br>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus minima eius animi reiciendis unde necessitatibus. Commodi rerum provident, distinctio enim delectus temporibus, quaerat fuga maxime cupiditate eius veniam ex eaque, laboriosam illum numquam. Sed doloribus aspernatur quidem ipsum excepturi, quae suscipit tempore recusandae esse aliquid, expedita, autem consequuntur adipisci! Soluta?
+                        </p>
                     </div>
                     
                 </div>
                 <div class="picture"></div>
             </section>
-            <section class="fin"><h2>Mange Bien</h2></section>
+            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section>
 
         </main> 
         <footer>
             <div class="menu_footer">
                 <div class="colonne">
-                    <h3>Menu Secondaire</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                    <h3>Sushi Monster</h3>
+                    <ps style="color: rgba(255, 255, 255, 0.308);">Une filiale AnanasDesign</p>
+                </div>
+                <div class="colonne">
+                    <h3>Commander</h3>
+                    <ul>
+                        <li>Montauban</li>
+                        <li>Toulouse</li>
+                        <li>Agen</li>
+                    </ul>
                 </div>
                 <div class="colonne">
                     <h3>Menu Secondaire</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                    <ul>
+                        <li>Citroen</li>
+                        <li>Peugeot</li>
+                        <li>Audi</li>
+                    </ul>
                 </div>
                 <div class="colonne">
                     <h3>Menu Secondaire</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
-                </div>
-                <div class="colonne">
-                    <h3>Menu Secondaire</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum perspiciatis dolor. Sapiente,</p>
+                    <ul>
+                        <li>Mention Légale</li>
+                        <li>CGU</li>
+                        <li>RGPD</li>
+                    </ul>
                 </div>
             </div>
             <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
