ajout des mots clés et d'une description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/application.css">
+    <meta name="description" content="Restaurant de Sushi à Montauban, sushi réalisé par un maitre sushi venu tout droit du Japon">
+    <meta name="keywords" content="Sushi, restaurant, montauban, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
     <title>Restaurant</title>
 </head>
 <body>
