--- a/html/toulouse.html
+++ b/html/toulouse.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/application.css">
+    <link rel="stylesheet" href="../css/application.css">
     <meta name="description" content="Restaurant de Sushi à Montauban, sushi réalisé par un maitre sushi venu tout droit du Japon">
     <meta name="keywords" content="Sushi, restaurant, montauban, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
-    <title>Restaurant</title>
+    <title>Sushi Monster Toulouse</title>
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
             </a></div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="../index.html">Accueil</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Livraison</a></li>
                     <li><a href="#apropos">A Propos</a></li>
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <main>
-            <section class="hero">
+            <!-- <section class="hero">
                 <div class="panneau">
                     <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
                 </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="picture"></div>
             </section>
-            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section>
+            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section> -->
 
         </main> 
         <footer>
@@ -57,8 +57,8 @@
                 <div class="colonne">
                     <h3>Commander</h3>
                     <ul>
-                        <li><a href="html/montauban.html">Montauban</a></li>
-                        <li><a href="html/toulouse.html">Toulouse</a></li>
+                        <li><a href="montauban.html">Montauban</a></li>
+                        <li><a href="toulouse.html">Toulouse</a></li>
                         <li>Agen</li>
                     </ul>
                 </div>
