--- a/html/agen.html
+++ b/html/agen.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/application.css">
     <meta name="description" content="Restaurant de Sushi à Montauban, sushi réalisé par un maitre sushi venu tout droit du Japon">
     <meta name="keywords" content="Sushi, restaurant, montauban, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
-    <title>Sushi Monster Toulouse</title>
+    <title>Sushi Monster Montauban</title>
 </head>
 <body>
     <div class="container">
@@ -51,7 +51,7 @@
         <footer>
             <div class="menu_footer">
                 <div class="colonne">
-                    <h3>Sushi Monster - Toulouse</h3>
+                    <h3>Sushi Monster</h3>
                     <ps style="color: rgba(255, 255, 255, 0.308);">Une filiale AnanasDesign</p>
                 </div>
                 <div class="colonne">
