--- a/html/montauban.html
+++ b/html/montauban.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header >
-            <div class="logo"><a href="index.html">
+            <div class="logo"><a href="../index.html"><img src="../image/logo_sushimonster.png" alt="logo_sushimonster">
             </a></div>
             <nav>
                 <ul>
@@ -51,27 +51,28 @@
         <footer>
             <div class="menu_footer">
                 <div class="colonne">
-                    <h3>Sushi Monster</h3>
+                    <h3>Sushi Monster - Montauban</h3>
                     <ps style="color: rgba(255, 255, 255, 0.308);">Une filiale AnanasDesign</p>
                 </div>
                 <div class="colonne">
-                    <h3>Commander</h3>
+                    <h3>Menu Secondaire</h3>
+                    <ul>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Livraison</a></li>
+                        <li><a href="#apropos">A Propos</a></li>
+                    </ul>
+                </div>
+                <div class="colonne">
+                    <h3>Nos restaurants</h3>
                     <ul>
                         <li><a href="montauban.html">Montauban</a></li>
                         <li><a href="toulouse.html">Toulouse</a></li>
-                        <li>Agen</li>
+                        <li><a href="Agen.html">Agen</a></li>
                     </ul>
                 </div>
                 <div class="colonne">
-                    <h3>Menu Secondaire</h3>
-                    <ul>
-                        <li>Citroen</li>
-                        <li>Peugeot</li>
-                        <li>Audi</li>
-                    </ul>
-                </div>
-                <div class="colonne">
-                    <h3>Menu Secondaire</h3>
+                    <h3>Légale</h3>
                     <ul>
                         <li>Mention Légale</li>
                         <li>CGU</li>
