--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="css/application.css">
     <meta name="description" content="Restaurant de Sushi à Montauban, sushi réalisé par un maitre sushi venu tout droit du Japon">
     <meta name="keywords" content="Sushi, restaurant, montauban, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
-    <title>Restaurant</title>
+    <title>Sushi Monster</title>
 </head>
 <body>
     <div class="container">
         <header >
-            <div class="logo"><a href="index.html">
+            <div class="logo"><a href="index.html"><img src="../image/logo_sushimonster.png" alt="logo_sushimonster">
             </a></div>
             <nav>
                 <ul>
@@ -51,27 +51,28 @@
         <footer>
             <div class="menu_footer">
                 <div class="colonne">
-                    <h3>Sushi Monster</h3>
+                    <h3>Sushi Monster - Accueil</h3>
                     <ps style="color: rgba(255, 255, 255, 0.308);">Une filiale AnanasDesign</p>
                 </div>
                 <div class="colonne">
-                    <h3>Commander</h3>
+                    <h3>Menu Secondaire</h3>
+                    <ul>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Livraison</a></li>
+                        <li><a href="#apropos">A Propos</a></li>
+                    </ul>
+                </div>
+                <div class="colonne">
+                    <h3>Nos restaurants</h3>
                     <ul>
                         <li><a href="html/montauban.html">Montauban</a></li>
                         <li><a href="html/toulouse.html">Toulouse</a></li>
-                        <li>Agen</li>
+                        <li><a href="html/toulouse.html">Agen</a></li>
                     </ul>
                 </div>
                 <div class="colonne">
-                    <h3>Menu Secondaire</h3>
-                    <ul>
-                        <li>Citroen</li>
-                        <li>Peugeot</li>
-                        <li>Audi</li>
-                    </ul>
-                </div>
-                <div class="colonne">
-                    <h3>Menu Secondaire</h3>
+                    <h3>Légale</h3>
                     <ul>
                         <li>Mention Légale</li>
                         <li>CGU</li>
