--- a/html/agen.html
+++ b/html/agen.html
@@ -23,8 +23,8 @@
             </nav>
         </header>
         <main>
-            <!-- <section class="hero">
-                <div class="panneau">
+            <section class="hero">
+                <div class="panneau_agen">
                     <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
                 </div>
             </section>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="picture"></div>
             </section>
-            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section> -->
+            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section>
 
         </main> 
         <footer>
