--- a/html/montauban.html
+++ b/html/montauban.html
@@ -23,17 +23,16 @@
             </nav>
         </header>
         <main>
-            <!-- <section class="hero">
-                <div class="panneau">
-                    <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
+            <section class="hero">
+                <div class="panneau_montauban">
+                    
+                        <h1> Sushi Monster - Montauban</h1>
                 </div>
             </section>
             <section class="apropos" id="apropos">
                 <div class="texte">
 
                     <div class="titres"> 
-                        
-                        <h1>Sushi Monster</h1>
                         <h2>Fait sortir le monstre en toi !!</h2>
                     </div>
                     <div class="contenu">
@@ -45,7 +44,7 @@
                 </div>
                 <div class="picture"></div>
             </section>
-            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section> -->
+            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section>
 
         </main> 
         <footer>
@@ -74,9 +73,9 @@
                 <div class="colonne">
                     <h3>Légale</h3>
                     <ul>
-                        <li>Mention Légale</li>
-                        <li>CGU</li>
-                        <li>RGPD</li>
+                        <li><a href="#">Mention Légale</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
                     </ul>
                 </div>
             </div>
