--- a/html/toulouse.html
+++ b/html/toulouse.html
@@ -23,8 +23,8 @@
             </nav>
         </header>
         <main>
-            <!-- <section class="hero">
-                <div class="panneau">
+            <section class="hero">
+                <div class="panneau_toulouse">
                     <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
                 </div>
             </section>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="picture"></div>
             </section>
-            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section> -->
+            <section class="fin"><h2>ORGHHHH Mais Mange Bien ??!!!</h2></section>
 
         </main> 
         <footer>
@@ -74,9 +74,9 @@
                 <div class="colonne">
                     <h3>Légale</h3>
                     <ul>
-                        <li>Mention Légale</li>
-                        <li>CGU</li>
-                        <li>RGPD</li>
+                        <li><a href="#">Mention Légale</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
                     </ul>
                 </div>
             </div>
