--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <section class="hero">
                 <div class="panneau">
-                    <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
+                        <img src="image/logo_sushimonster.png" alt="logo_sushi_monster">
                 </div>
             </section>
             <section class="apropos" id="apropos">
@@ -74,9 +74,9 @@
                 <div class="colonne">
                     <h3>Légale</h3>
                     <ul>
-                        <li>Mention Légale</li>
-                        <li>CGU</li>
-                        <li>RGPD</li>
+                        <li><a href="#">Mention Légale</a></li>
+                        <li><a href="#">lorem</a></li>
+                        <li><a href="#">lorem</a></li>
                     </ul>
                 </div>
             </div>
