--- a/html/agen.html
+++ b/html/agen.html
@@ -57,7 +57,7 @@
                 <div class="colonne">
                     <h3>Menu Secondaire</h3>
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="../index.html">Accueil</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Livraison</a></li>
                         <li><a href="#apropos">A Propos</a></li>
@@ -68,7 +68,7 @@
                     <ul>
                         <li><a href="montauban.html">Montauban</a></li>
                         <li><a href="toulouse.html">Toulouse</a></li>
-                        <li><a href="Agen.html">Agen</a></li>
+                        <li><a href="agen.html">Agen</a></li>
                     </ul>
                 </div>
                 <div class="colonne">
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
+            <div class="click_up"><a href="agen.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
         </footer>
     </div>
 </body>
