--- a/html/montauban.html
+++ b/html/montauban.html
@@ -56,7 +56,7 @@
                 <div class="colonne">
                     <h3>Menu Secondaire</h3>
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="../index.html">Accueil</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Livraison</a></li>
                         <li><a href="#apropos">A Propos</a></li>
@@ -67,7 +67,7 @@
                     <ul>
                         <li><a href="montauban.html">Montauban</a></li>
                         <li><a href="toulouse.html">Toulouse</a></li>
-                        <li><a href="Agen.html">Agen</a></li>
+                        <li><a href="agen.html">Agen</a></li>
                     </ul>
                 </div>
                 <div class="colonne">
@@ -79,7 +79,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
+            <div class="click_up"><a href="montauban.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
         </footer>
     </div>
 </body>
