--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <ul>
                         <li><a href="html/montauban.html">Montauban</a></li>
                         <li><a href="html/toulouse.html">Toulouse</a></li>
-                        <li><a href="html/toulouse.html">Agen</a></li>
+                        <li><a href="html/agen.html">Agen</a></li>
                     </ul>
                 </div>
                 <div class="colonne">
