--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/application.css">
-    <meta name="description" content="Restaurant de Sushi à Montauban, sushi réalisé par un maitre sushi venu tout droit du Japon">
-    <meta name="keywords" content="Sushi, restaurant, montauban, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
+    <meta name="description" content="Franchise de Restaurant de Sushi, sushi réalisé par un maitre sushi venu tout droit du Japon. Peut se transformer en monstre si la nourriture est trop bonne">
+    <meta name="keywords" content="Sushi, restaurant, monster, restaurant montauban,sushiman, sushi monster, monster sushi, nouille, japon, asiatique, ramen">
     <title>Sushi Monster</title>
 </head>
 <body>
@@ -17,7 +17,14 @@
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Menu</a></li>
-                    <li><a href="#">Livraison</a></li>
+                    <div class="nav_verticale">
+                        <button class="bouton"> Nos Restaurants</button>
+                        <div class="bouton_contenu">
+                        <a href="html/montauban.html">Montauban</a>
+                        <a href="html/toulouse.html">Toulouse</a>
+                        <a href="html/agen.html">Agen</a>
+                        </div>
+                    </div>
                     <li><a href="#apropos">A Propos</a></li>
                 </ul>
             </nav>
@@ -38,7 +45,7 @@
                     </div>
                     <div class="contenu">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit laboriosam nobis quaerat incidunt harum tempora sint ullam eos dolores repudiandae excepturi saepe, quia expedita architecto sunt, magnam quo ex deserunt soluta esse facilis iusto nihil! Rerum eaque necessitatibus iusto quasi delectus vero quos quia vitae <br>a! Sed dignissimos molestiae quo veritatis praesentium, culpa deleniti, architecto voluptate inventore, optio porro enim. Ullam quisquam voluptatem quas, natus cum veniam eos fugiat facere laboriosam repellendus optio consectetur reprehenderit maiores recusandae fuga, placeat,</br><br></br>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus minima eius animi reiciendis unde necessitatibus. Commodi rerum provident, distinctio enim delectus temporibus, quaerat fuga maxime cupiditate eius veniam ex eaque, laboriosam illum numquam. Sed doloribus aspernatur quidem ipsum excepturi, quae suscipit tempore recusandae esse aliquid, expedita, autem consequuntur adipisci! Soluta?
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus minima eius animi reiciendis unde necessitatibus. Commodi rerum provident, distinctio enim delectus temporibus, quaerat fuga maxime cupiditate eius veniam ex eaque, laboriosam illum numquam. Sed doloribus aspernatur quidem ipsum excepturi, quae suscipit tempore recusandae esse aliquid, expedita, autem consequuntur adipisci! Soluta? <br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, similique unde ab at doloremque saepe ad amet harum laboriosam architecto ipsa nobis atque assumenda fugit omnis aliquid ipsum, tempore perferendis?
                         </p>
                     </div>
                     
