--- a/html/montauban.html
+++ b/html/montauban.html
@@ -17,7 +17,15 @@
                 <ul>
                     <li><a href="../index.html">Accueil</a></li>
                     <li><a href="#">Menu</a></li>
-                    <li><a href="#">Livraison</a></li>
+                    <div class="nav_verticale">
+                        <button class="bouton">Nos Restaurants</button>
+                        <div class="bouton_contenu">
+                        <a href="montauban.html">Montauban</a>
+                        <a href="toulouse.html">Toulouse</a>
+                        <a href="agen.html">Agen</a>
+                        </div>
+                    </div>
+                    
                     <li><a href="#apropos">A Propos</a></li>
                 </ul>
             </nav>
