--- a/html/agen.html
+++ b/html/agen.html
@@ -51,7 +51,7 @@
         <footer>
             <div class="menu_footer">
                 <div class="colonne">
-                    <h3>Sushi Monster</h3>
+                    <h3>Sushi Monster - Agen</h3>
                     <ps style="color: rgba(255, 255, 255, 0.308);">Une filiale AnanasDesign</p>
                 </div>
                 <div class="colonne">
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
+            <div class="click_up"><a href="agen.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
         </footer>
     </div>
 </body>
