--- a/html/toulouse.html
+++ b/html/toulouse.html
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="click_up"><a href="index.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
+            <div class="click_up"><a href="toulouse.html"><img src="/image/arrow_up.png" alt="arrow_up"></a></div>
         </footer>
     </div>
 </body>
